# learning-public

./: .env  .gitignore  README.md  default.nix  pyproject.toml  requirements.txt
ML_exercises/: chapter_4.ipynb
ML_exercises/imageNet/: main.py  super_resolve.py
asyncio/: async_socket_svr.py  decoratpr.py  endpoint.py  fib.py  multiproc.py  network.py  postgres.py  postgres_create_table.py  scoket_svr.py  sku.py  stream.py  task.py  threads.py
data_exercises/electricity_load/: column_schema.json
interview_problem_sets/Aquatic/: INEXP DataTest v3.docx  aquatic.ipynb  therory.tex
interview_problem_sets/Aquatic/submission/: aquatic.ipynb  pyproject.toml
leetcode/array_string/: bestTimeToBuyAndSellStock_I.py  firstOcurrance.py  longestCommonPrefix.py  partition.py  removeDuplicate.py  removeDuplicates_II.py  removeElement.py  romanToInteger.py  rotate_array.py  zigzag.py
leetcode/dynamic_programming/: climbing_stairs.py  coin_change.py  house_robber.py  knapsack.py  longest_common_subsequence.py  longest_increasing_subsequence.py  minimum_edit_distance.py  minimum_path_sum.py  subset_sum.py  traingle.py  word_break.py
leetcode/finance/: monte_carlo.ipynb  monte_carlo.py
leetcode/hashmap/: containsDuplicate.py  groupAnagrams.py  happyNumber.py  isomorphicSrings.py  longestConsecutiveSequence.py  ransomnote.py  twoSum.py  validAnagram.py  wordPattern.py
leetcode/linked_list/: lru_cache.py
leetcode/matrix/: valid_sudoku.py
leetcode/quant_questions/: position_fitting.ipynb  quant_interview.tex
leetcode/sliding_window/: minimum_size_subarray_sum.py
(+100 files in other folders)
