[tool.poetry]
name = "learning"
version = "0.1.0"
description = ""
authors = ["dhunt <davidatwoodhunt1@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
requests = ">=2.26.0"
numpy = ">=1.19.5"
jupyter = ">=1.0.0"
matplotlib = ">=3.4.3"
pandas = ">=1.3.3"
scipy = ">=1.7.1"
scikit-learn = ">=1.0"
xgboost = ">=1.4.2"
transformers = ">=4.11.3"
tensorflow = ">=2.10.0"
joblib = ">=0.14.1"
tokenizers = ">=0.10.3"
setuptools = ">=70.0.0"
pyarrow = "^17.0.0"
arch = "^7.0.0"
statsmodels = "^0.14.2"
coverage = "^7.6.1"
pytest = "^8.3.2"
pulp = "^2.9.0"

[tool.poetry.dev-dependencies]
# build systems for dependencies
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.dotenv]
ignore = "false"
location = ".env"


