[tool.poetry]
name = "aquatic"
version = "0.1.0"
description = ""
authors = ["dhunt <davidatwoodhunt1@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.0.0"
ipython = "^8.26.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
